<?xml version="1.0" encoding="utf-8"?>
<com.ramotion.foldingcell.FoldingCell
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/folding_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="@dimen/margin_16">

    <FrameLayout
        android:id="@+id/cell_content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/raduis_corner">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <TextView
                android:id="@+id/tv_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_12" />

            <TextView
                android:id="@+id/tv2_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/tv_currency"
                android:fontFamily="@font/poppins_bold"
                android:text="120"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_12" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/expiry_date"
                android:gravity="center"
                android:textColor="@color/colorPink"
                android:textSize="@dimen/size_12" />

            <TextView
                android:id="@+id/tv_expiryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="1/1/12020"
                android:layout_below="@id/tv_date"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_12" />


            <TextView
                android:id="@+id/tv2_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/poppins_bold"
                android:text="100"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/start_hour"
                android:layout_toEndOf="@id/tv2_hours"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/hours"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_12"/>

        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="UI/UX Designer"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:gravity="center"
                android:textSize="@dimen/size_12"
                android:text="in partnership with Google and the international NGO Mercy Corps"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tv-trainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="Hazem Alrekhawi"
                android:textSize="@dimen/size_12" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/btn_bg2"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/bottom_btn"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>


    </FrameLayout>
    <FrameLayout
        android:id="@+id/cell_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            app:cardCornerRadius="@dimen/corner_raduis"
            app:cardElevation="@dimen/card_elevation"
    >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_16"
                android:paddingBottom="@dimen/margin_16">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:fontFamily="@font/poppins_bold"
                    android:text="UI/UX Designer"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.056" />

                <TextView
                    android:id="@+id/tv_hoursNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/hours_num_bg"
                    android:padding="@dimen/padding_tvhour"
                    android:text="100"
                    android:textColor="#2E2E6A"
                    android:textSize="@dimen/size_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/price"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/size_12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="120"
                    android:textColor="@color/colorPink"
                    android:textSize="@dimen/size_12"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:fontFamily="@font/poppins_bold"
                    android:text="gaza sky geeks"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/size_12"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hoursNum" />

                <ImageView
                    android:id="@+id/btn_popup"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_menu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>

</com.ramotion.foldingcell.FoldingCell>
